--- a/template.yaml
+++ b/template.yaml
@@ -32,3 +32,16 @@ Resources:
       ProvisionedThroughput:
         ReadCapacityUnits: 5
         WriteCapacityUnits: 5
+
+  FeedbackApiGateway:
+    Type: AWS::Serverless::Api
+    Properties:
+      StageName: prod
+      Models:
+        FeedbackMsg:
+          type: object
+          required:
+            - msg
+          properties:
+            msg:
+              type: string
