--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Thein Htut",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.720.0"
+    "aws-sdk": "^2.720.0",
+    "uuid": "^8.3.0"
   }
 }
